--- a/index.html
+++ b/index.html
@@ -970,6 +970,27 @@ cursor: pointer;
   outline-offset: 2px;
   border-radius: 8px;
 }
+/* 설정 패널 X 버튼 */
+#closeSettingsBtn{
+  all: unset;
+  width: 28px;         /* 클릭 영역(너무 크지 않게) */
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 16px;     /* ✕ 자체 크기 */
+  line-height: 1;
+
+  color: #aaa;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+#closeSettingsBtn:active{
+  transform: scale(0.92);
+  background: rgba(255,255,255,0.06);
+}
 
    
 /* .css ㅊㄴㄴ 붙여넣기 */
