--- a/index.html
+++ b/index.html
@@ -992,7 +992,9 @@ cursor: pointer;
   background: rgba(255,255,255,0.06);
 }
 
-   
+.settings-header{
+  padding-right: 2px;
+}   
 /* .css ㅊㄴㄴ 붙여넣기 */
    
 
