--- a/index.html
+++ b/index.html
@@ -991,6 +991,13 @@ cursor: pointer;
   color: #ff6b6b;            /* 눌렀을 때만 살짝 빨강 */
 }
 
+.settings-btn svg {
+  display: block;
+}
+
+.settings-btn {
+  color: #ddd;   /* 아이콘 색 */
+}
 
    
 /* .css ㅊㄴㄴ 붙여넣기 */
@@ -1112,7 +1119,46 @@ input[type="number"] {
     <div>그 외의 문제는 근육이 없어서 생긴다</div>
   </div>
 
-  <button id="openSettingsBtn" class="settings-btn">⚙️</button>
+  <button id="openSettingsBtn" class="settings-btn" aria-label="설정">
+  <svg
+    width="18"
+    height="18"
+    viewBox="0 0 24 24"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="2"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  >
+    <circle cx="12" cy="12" r="3"></circle>
+    <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06
+             a2 2 0 0 1-2.83 2.83l-.06-.06
+             a1.65 1.65 0 0 0-1.82-.33
+             a1.65 1.65 0 0 0-1 1.51V21
+             a2 2 0 0 1-4 0v-.09
+             a1.65 1.65 0 0 0-1-1.51
+             a1.65 1.65 0 0 0-1.82.33l-.06.06
+             a2 2 0 0 1-2.83-2.83l.06-.06
+             a1.65 1.65 0 0 0 .33-1.82
+             a1.65 1.65 0 0 0-1.51-1H3
+             a2 2 0 0 1 0-4h.09
+             a1.65 1.65 0 0 0 1.51-1
+             a1.65 1.65 0 0 0-.33-1.82l-.06-.06
+             a2 2 0 0 1 2.83-2.83l.06.06
+             a1.65 1.65 0 0 0 1.82.33H9
+             a1.65 1.65 0 0 0 1-1.51V3
+             a2 2 0 0 1 4 0v.09
+             a1.65 1.65 0 0 0 1 1.51
+             a1.65 1.65 0 0 0 1.82-.33l.06-.06
+             a2 2 0 0 1 2.83 2.83l-.06.06
+             a1.65 1.65 0 0 0-.33 1.82V9
+             a1.65 1.65 0 0 0 1.51 1H21
+             a2 2 0 0 1 0 4h-.09
+             a1.65 1.65 0 0 0-1.51 1z">
+    </path>
+  </svg>
+</button>
+
 </div>
 
 
