--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ td, th {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 55px; 
   padding: 12px 10px;   /* 14 → 10 (오른쪽 더 붙음) */
 }
 
