--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ td, th {
   align-items: center;
   height: 55px; 
   padding: 12px 10px;   /* 14 → 10 (오른쪽 더 붙음) */
+    border-bottom: 1px solid rgba(255,255,255,0.04);
 }
 
 
