--- a/index.html
+++ b/index.html
@@ -724,7 +724,11 @@ cursor: pointer;
   cursor: pointer;
 }
 
-
+/* ✅ 활성: 글자만 노란색 */
+.bottomTab .tabBtn.active{
+  color: #FFD700;
+  background: transparent;  /* 배경 절대 변경 없음 */
+}
 
 
 .settings-btn {
