--- a/index.html
+++ b/index.html
@@ -2641,8 +2641,41 @@ function getToday() {
   return `${yy}.${mm}.${dd}`;
 }
 
-   const tabBtns = document.querySelectorAll('.bottomTab .tabBtn');
-const tabContents = document.querySelectorAll('.tabContent');
+// ❌ 이 2줄(중복 선언) 삭제/변경 필요
+// const tabBtns = document.querySelectorAll('.bottomTab .tabBtn');
+// const tabContents = document.querySelectorAll('.tabContent');
+
+// ✅ 이렇게 변경
+const bottomTabBtns = document.querySelectorAll('.bottomTab .tabBtn');
+const bottomTabContents = document.querySelectorAll('.tabContent');
+
+bottomTabBtns.forEach(btn => {
+  btn.addEventListener('click', () => {
+    calPopup.classList.add("hidden");
+
+    bottomTabBtns.forEach(b => b.classList.remove('active'));
+    btn.classList.add('active');
+
+    const target = btn.dataset.target;
+    bottomTabContents.forEach(tc => {
+      const on = (tc.id === target);
+      tc.classList.toggle('active', on);
+      tc.style.display = on ? 'block' : 'none';
+    });
+
+    document.querySelector('.app').scrollTo({ top: 0, behavior: 'auto' });
+
+    // Tip 탭 초기화
+    if (target === 'tab4') {
+      partScreen.style.display = 'block';
+      exerciseScreen.style.display = 'none';
+      detailScreen.style.display = 'none';
+    } else {
+      detailScreen.style.display = 'none';
+    }
+  });
+});
+
 
 
 
