--- a/index.html
+++ b/index.html
@@ -718,10 +718,12 @@ cursor: pointer;
   font-weight: 600;
 
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 
   cursor: pointer;
+
+ padding-top: 14px;         /* 🔥 이 값으로 위로 올림 */
 }
 
 /* ✅ 활성: 글자만 노란색 */
