index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@ input[type="number"] {
   <button class="tabBtn active" data-target="tab1">1RM</button>
   <button class="tabBtn" data-target="tab2">3대</button>
   <button class="tabBtn" data-target="tab3">달력</button>
-  <button class="tabBtn" data-target="tab4">Tip</button>
+  <button class="tabBtn" data-target="tab4">기록</button>
    <button class="tabBtn" data-target="tab5">예정</button>
 </div>
 
