--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<title>1RM 계산기 + 3대 기록표</title>
+<title>1RM</title>
 
 <style>
 /* ===============================
