index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@ const LS_KEYS = {
   records: "mf_records_v1",              // bench/squat/dead
   calendar: "mf_calendar_v1",            // calData
   accessoriesList: (part) => `mf_acc_list_${part}_v1`,   // part별 종목 리스트
-  accessoryRecords: "mf_acc_records_v1"  // 보조운동 기록 전체
+  accessoryRecords: "mf_acc_records_v1",  // 보조운동 기록 전체
   goals: "mf_goals_v1"
 };
 
